# ozz-animationCal3DWrapper

./: .gitignore  BONE_LENGTH_IMPLEMENTATION.md  Build wrapper.bat  CMakeLists.txt  README.md  cal3d_wrapper.h
build-wrapper/: CMakeCache.txt  Makefile  cmake_install.cmake
cal3d-src/: BONE_LENGTH_ALGORITHM.md  Makefile.example  bone_length_example.cpp
cal3d-src/src/cal3d/: corebone.cpp  corebone.h  coreskeleton.cpp  coreskeleton.h  global.h
howtos/: CMakeLists.txt  cal3d_skeleton_converter.cc
test/: CMakeLists.txt
test/wrapper/: CMakeLists.txt  skeleton_converter_tests.cc
wrapper/: Build Errors.txt  Build Ouput.txt  Build wrapper.bat  CMakeLists.txt  README.md  Run CMake Setup.bat  SKELETON_CONVERTER.md  example.c  generate_stubs.py
wrapper-stub/Cal3DWrapperStub/: Cal3DWrapperStub.cpp  Cal3DWrapperStub.h  Cal3DWrapperStub.sln  Cal3DWrapperStub.vcxproj  Cal3DWrapperStub.vcxproj.filters  all_stubs.cpp  cpp.hint  dllmain.cpp  james_cal3d_wrapper.cpp  james_cal3d_wrapper.h
wrapper-stub/Cal3DWrapperStub/Debug/: Cal3DWrapperStub.exp  Cal3DWrapperStub.lib  cal3d.dll.exp  cal3d.dll.lib
wrapper/include/: cal3d_wrapper_internal.h
wrapper/src/: all_stubs.cpp  all_stubs_old.cpp  cal3d_core_model.cpp  cal3d_wrapper_impl.cpp  core_model.cpp  skeleton_converter.cpp  stubs_generator.sh
